added main banner content

--- a/index.html
+++ b/index.html
@@ -16,5 +16,20 @@
       </div>
     </div>
 
+    <!-- Main Banner -->
+
+    <div class="mainBanner">
+      <div class="container">
+        <div class="newArrival">
+          <h4>NEW ARRIVAL</h4>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
+      </div>
+    </div>
+
+    <!-- Menu Content -->
+
+
+
   </body>
 </html>
